2015-07-07  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_NCURSES_CONFIG: PKG_CONFIG may simply be unset - fix

2015-07-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_WITH_LOCALE_ALIAS, AcSplit/CF_WITH_ENCODINGS_DIR:
	cosmetic fix

2015-07-04  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_MAKE_DOCS: integrate with CF_WITH_MAN2HTML

	* AcSplit/CF_PROG_GROFF: add check for symmetry with nroff
	omit redundant AC_SUBST

2015-06-27  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_LIB_RULES:
	tweak for removing deprecated ABI5 symbols when building ABI6

2015-06-06  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_WITH_PKG_CONFIG_LIBDIR: tidy a checking-message

	* AcSplit/CF_WITH_ABI_VERSION: add case to downgrade from 6.0 to 5.9

	* AcSplit/CF_NCURSES_ABI_6:
	make this message consistent with a similar one

	* AcSplit/CF_NCURSES_CONFIG:
	amend change for cross-compiling to make it succeed, but show "maybe" in log

	* AcSplit/CF_ABI_DEFAULTS:
	add filter-syms and with-lp64 option defaults

	* AcSplit/CF_NCURSES_WITH_ABI_VERSION: ci-aclocal generated header

	* AcSplit/CF_WITH_PKG_CONFIG_LIBDIR: fix typo

	* AcSplit/CF_WITH_ABI_VERSION: handle conversion from 5.x to 6.0

2015-05-28  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_NCURSES_CONFIG: fix typo

2015-05-25  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_ADD_INCDIR:
	fix an infinite loop when the include-directory to be added does not exist
	(Debian #786436)

	* AcSplit/CF_NCURSES_CONFIG:
	fix for cross-compiling, could just assume ncurses but be consistent and
	assume it is not - otherwise why am I running a test-program?  (Debian #786436)

2015-05-15  Thomas E. Dickey  <dickey@invisible-island.net>

	* AcSplit/CF_CURSES_TERMCAP, AcSplit/CF_GCC_OPT_RDYNAMIC, AcSplit/CF_INSTALL_OPT_O, AcSplit/CF_STDIO_UNLOCKED, AcSplit/CF_TYPE_OUTCHAR:
	cosmetic-fixes
