@@ -1,4 +1,4 @@
-dnl CF_MAN_PAGES version: 45 updated: 2015/04/18 08:56:57
+dnl CF_MAN_PAGES version: 46 updated: 2015/08/05 20:44:28
 dnl ------------
 dnl Try to determine if the man-pages on the system are compressed, and if
 dnl so, what format is used.  Use this information to construct a script that
@@ -51,7 +51,7 @@ cf_edit_man=./edit_man.sh
 cf_man_alias=`pwd`/man_alias.sed
 
 cat >$cf_edit_man <<CF_EOF
-#! /bin/sh
+#! $SHELL
 # this script is generated by the configure-script CF_MAN_PAGES macro.
 
 prefix="$cf_prefix"
@@ -89,7 +89,7 @@ shift || exit 1
 if test "\$form" = normal ; then
 	if test "$cf_format" = yes ; then
 	if test "$cf_inboth" = no ; then
-		sh \[$]0 format \$verb \$mandir \$srcdir \[$]*
+		$SHELL \[$]0 format \$verb \$mandir \$srcdir \[$]*
 		exit $?
 	fi
 	fi
@@ -330,7 +330,7 @@ done
 
 if test $cf_inboth = yes ; then
 if test \$form != format ; then
-	sh \[$]0 format \$verb \$mandir \$srcdir \[$]*
+	$SHELL \[$]0 format \$verb \$mandir \$srcdir \[$]*
 fi
 fi
 
